--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@fontsource/inter": "^5.2.6",
     "@storybook/addon-themes": "^9.0.17",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
