--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://doojin.github.io/pharmacy-ui",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "deploy": "gh-pages -d storybook-static"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.22.0",
@@ -38,6 +40,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-storybook": "^9.0.17",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "playwright": "^1.54.1",
     "storybook": "^9.0.17",
